packages/adr-manager/src/plugins/parser/MADR.g4
grammar MADR;

start : 
	HEADING_PREFIX title NEWLINE wslbs 
	( STATUS_MARKER status (WS OPTIONAL_MAKER)? wslbs )?
	( DECIDERS_MARKER deciders (WS OPTIONAL_MAKER)? wslbs )?
	( DATE_MARKER date (WS OPTIONAL_MAKER)? NEWLINE wslbs )?
	( TECHNICAL_STORY_MARKER technicalStory (WS OPTIONAL_MAKER)? wslbs )?
	( CONTEXT_AND_PROBLEM_STATEMENT wslbs )?
	( NEWLINE contextAndProblemStatement wslbs )? // Text without a heading is interpreted as context and problem statement
	( DECISION_DRIVERS_HEADING (WS OPTIONAL_MAKER)? wslbs decisionDrivers wslbs )?
	( CONSIDERED_OPTIONS_HEADING wslbs consideredOptions wslbs )?
	( DECISION_OUTCOME_HEADING wslbs decisionOutcome wslbs )?
	( PROS_AND_CONS_OF_THE_OPTIONS_HEADING (WS OPTIONAL_MAKER)? wslbs prosAndConsOfOptions wslbs )?
	( LINKS_HEADING (WS OPTIONAL_MAKER)? wslbs links wslbs )?
	EOF
	;


title : textLine ;

status: textLine ;

deciders : textLine ;

date : textLine ;

technicalStory : textLine ;

contextAndProblemStatement : multilineText ;

decisionDrivers : list ;

consideredOptions : list ;

decisionOutcome : wslbs chosenOptionAndExplanation 
	(wslbs POSITIVE_CONSEQUENCES_HEADING (WS OPTIONAL_MAKER)? positiveConsequences)?
	(wslbs NEGATIVE_CONSEQUENCES_HEADING (WS OPTIONAL_MAKER)? negativeConsequences)? ;

prosAndConsOfOptions : (optionSection wslbs)+ ;

optionSection : 
	SUBSUBHEADING_PREFIX optionTitle NEWLINE 
	(wslbs optionDescription)?
	(wslbs prolist)?
	(wslbs conlist)?
	;

chosenOptionAndExplanation : multilineText ;
positiveConsequences : list ;
negativeConsequences : list ;

optionTitle : textLine ;
optionDescription : multilineText ;
prolist : (wslbs LIST_MARKER 'Good, because ' textLine) + ;
conlist : (wslbs LIST_MARKER 'Bad, because ' textLine) + ;

links : list wslbs ;

list : (wslbs LIST_MARKER textLine?) + ;

textLine : (any | WS) +? ;

multilineText : (any | wslb) +? ;

any : ( WORD | CHARACTER | LIST_MARKER | HEADING_PREFIX | SUBSUBSUBHEADING_PREFIX) ;

wslb : ( WS | NEWLINE ) ;
wslbs : wslb *;

WORD : CHARACTER+;
CHARACTER : (~[\n\t\r\f ] ) ;

WS : [\f\t ] ;
NEWLINE : [\r]?[\n] ;

LIST_MARKER : NEWLINE ('* ' | '- ');
STATUS_MARKER : LIST_MARKER 'Status: ';
DATE_MARKER : LIST_MARKER 'Date: ';
DECIDERS_MARKER : LIST_MARKER 'Deciders: ';
OPTIONAL_MAKER: '<!-- optional -->';
TECHNICAL_STORY_MARKER : NEWLINE 'Technical Story: ';

HEADING_PREFIX : '# ' ;
SUBSUBHEADING_PREFIX : NEWLINE '### ' ;
SUBSUBSUBHEADING_PREFIX : '###' '#'+  ' ' ;

CONTEXT_AND_PROBLEM_STATEMENT : NEWLINE ( '## Context and Problem Statement' | '## Context and problem statement' );
DECISION_DRIVERS_HEADING : NEWLINE ( '## Decision Drivers' | '## Decision drivers' ) ;
CONSIDERED_OPTIONS_HEADING : NEWLINE ( '## Considered Options' | '## Considered options' ) ;
DECISION_OUTCOME_HEADING : NEWLINE ( '## Decision Outcome' | '## Decision outcome' ) ;
POSITIVE_CONSEQUENCES_HEADING : NEWLINE ( '### Positive Consequences' | '### Positive consequences') ;
NEGATIVE_CONSEQUENCES_HEADING : NEWLINE ( '### Negative Consequences' | '### Negative consequences') ;
PROS_AND_CONS_OF_THE_OPTIONS_HEADING : NEWLINE ( '## Pros and Cons of the Options' | '## Pros and cons of the options') ;
LINKS_HEADING : NEWLINE '## Links' ;
