packages/adr-manager/src/plugins/parser/MADRParser.js
// Generated from MADR.g4 by ANTLR 4.13.0
import antlr4 from "antlr4";
import MADRListener from "./MADRListener.js";

const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map((ds, index) => new antlr4.dfa.DFA(ds, index));

const sharedContextCache = new antlr4.atn.PredictionContextCache();

export default class MADRParser extends antlr4.Parser {
    static grammarFileName = "MADR.g4";
    static literalNames = [
        null,
        "'Good, because '",
        "'Bad, because '",
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        "'<!-- optional -->'",
        null,
        "'# '"
    ];
    static symbolicNames = [
        null,
        null,
        null,
        "WORD",
        "CHARACTER",
        "WS",
        "NEWLINE",
        "LIST_MARKER",
        "STATUS_MARKER",
        "DATE_MARKER",
        "DECIDERS_MARKER",
        "OPTIONAL_MAKER",
        "TECHNICAL_STORY_MARKER",
        "HEADING_PREFIX",
        "SUBSUBHEADING_PREFIX",
        "SUBSUBSUBHEADING_PREFIX",
        "CONTEXT_AND_PROBLEM_STATEMENT",
        "DECISION_DRIVERS_HEADING",
        "CONSIDERED_OPTIONS_HEADING",
        "DECISION_OUTCOME_HEADING",
        "POSITIVE_CONSEQUENCES_HEADING",
        "NEGATIVE_CONSEQUENCES_HEADING",
        "PROS_AND_CONS_OF_THE_OPTIONS_HEADING",
        "LINKS_HEADING"
    ];
    static ruleNames = [
        "start",
        "title",
        "status",
        "deciders",
        "date",
        "technicalStory",
        "contextAndProblemStatement",
        "decisionDrivers",
        "consideredOptions",
        "decisionOutcome",
        "prosAndConsOfOptions",
        "optionSection",
        "chosenOptionAndExplanation",
        "positiveConsequences",
        "negativeConsequences",
        "optionTitle",
        "optionDescription",
        "prolist",
        "conlist",
        "links",
        "list",
        "textLine",
        "multilineText",
        "any",
        "wslb",
        "wslbs"
    ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = MADRParser.ruleNames;
        this.literalNames = MADRParser.literalNames;
        this.symbolicNames = MADRParser.symbolicNames;
    }

    start() {
        let localctx = new StartContext(this, this._ctx, this.state);
        this.enterRule(localctx, 0, MADRParser.RULE_start);
        var _la = 0;
        try {
            this.enterOuterAlt(localctx, 1);
            this.state = 52;
            this.match(MADRParser.HEADING_PREFIX);
            this.state = 53;
            this.title();
            this.state = 54;
            this.match(MADRParser.NEWLINE);
            this.state = 55;
            this.wslbs();
            this.state = 64;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            if (_la === 8) {
                this.state = 56;
                this.match(MADRParser.STATUS_MARKER);
                this.state = 57;
                this.status();
                this.state = 60;
                this._errHandler.sync(this);
                var la_ = this._interp.adaptivePredict(this._input, 0, this._ctx);
                if (la_ === 1) {
                    this.state = 58;
                    this.match(MADRParser.WS);
                    this.state = 59;
                    this.match(MADRParser.OPTIONAL_MAKER);
                }
                this.state = 62;
                this.wslbs();
            }

            this.state = 74;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            if (_la === 10) {
                this.state = 66;
                this.match(MADRParser.DECIDERS_MARKER);
                this.state = 67;
                this.deciders();
                this.state = 70;
                this._errHandler.sync(this);
                var la_ = this._interp.adaptivePredict(this._input, 2, this._ctx);
                if (la_ === 1) {
                    this.state = 68;
                    this.match(MADRParser.WS);
                    this.state = 69;
                    this.match(MADRParser.OPTIONAL_MAKER);
                }
                this.state = 72;
                this.wslbs();
            }

            this.state = 85;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            if (_la === 9) {
                this.state = 76;
                this.match(MADRParser.DATE_MARKER);
                this.state = 77;
                this.date();
                this.state = 80;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
                if (_la === 5) {
                    this.state = 78;
                    this.match(MADRParser.WS);
                    this.state = 79;
                    this.match(MADRParser.OPTIONAL_MAKER);
                }

                this.state = 82;
                this.match(MADRParser.NEWLINE);
                this.state = 83;
                this.wslbs();
            }

            this.state = 95;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            if (_la === 12) {
                this.state = 87;
                this.match(MADRParser.TECHNICAL_STORY_MARKER);
                this.state = 88;
                this.technicalStory();
                this.state = 91;
                this._errHandler.sync(this);
                var la_ = this._interp.adaptivePredict(this._input, 6, this._ctx);
                if (la_ === 1) {
                    this.state = 89;
                    this.match(MADRParser.WS);
                    this.state = 90;
                    this.match(MADRParser.OPTIONAL_MAKER);
                }
                this.state = 93;
                this.wslbs();
            }

            this.state = 99;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            if (_la === 16) {
                this.state = 97;
                this.match(MADRParser.CONTEXT_AND_PROBLEM_STATEMENT);
                this.state = 98;
                this.wslbs();
            }

            this.state = 105;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            if (_la === 6) {
                this.state = 101;
                this.match(MADRParser.NEWLINE);
                this.state = 102;
                this.contextAndProblemStatement();
                this.state = 103;
                this.wslbs();
            }

            this.state = 116;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            if (_la === 17) {
                this.state = 107;
                this.match(MADRParser.DECISION_DRIVERS_HEADING);
                this.state = 110;
                this._errHandler.sync(this);
                var la_ = this._interp.adaptivePredict(this._input, 10, this._ctx);
                if (la_ === 1) {
                    this.state = 108;
                    this.match(MADRParser.WS);
                    this.state = 109;
                    this.match(MADRParser.OPTIONAL_MAKER);
                }
                this.state = 112;
                this.wslbs();
                this.state = 113;
                this.decisionDrivers();
                this.state = 114;
                this.wslbs();
            }

            this.state = 123;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            if (_la === 18) {
                this.state = 118;
                this.match(MADRParser.CONSIDERED_OPTIONS_HEADING);
                this.state = 119;
                this.wslbs();
                this.state = 120;
                this.consideredOptions();
                this.state = 121;
                this.wslbs();
            }

            this.state = 130;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            if (_la === 19) {
                this.state = 125;
                this.match(MADRParser.DECISION_OUTCOME_HEADING);
                this.state = 126;
                this.wslbs();
                this.state = 127;
                this.decisionOutcome();
                this.state = 128;
                this.wslbs();
            }

            this.state = 141;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            if (_la === 22) {
                this.state = 132;
                this.match(MADRParser.PROS_AND_CONS_OF_THE_OPTIONS_HEADING);
                this.state = 135;
                this._errHandler.sync(this);
                var la_ = this._interp.adaptivePredict(this._input, 14, this._ctx);
                if (la_ === 1) {
                    this.state = 133;
                    this.match(MADRParser.WS);
                    this.state = 134;
                    this.match(MADRParser.OPTIONAL_MAKER);
                }
                this.state = 137;
                this.wslbs();
                this.state = 138;
                this.prosAndConsOfOptions();
                this.state = 139;
                this.wslbs();
            }

            this.state = 152;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            if (_la === 23) {
                this.state = 143;
                this.match(MADRParser.LINKS_HEADING);
                this.state = 146;
                this._errHandler.sync(this);
                var la_ = this._interp.adaptivePredict(this._input, 16, this._ctx);
                if (la_ === 1) {
                    this.state = 144;
                    this.match(MADRParser.WS);
                    this.state = 145;
                    this.match(MADRParser.OPTIONAL_MAKER);
                }
                this.state = 148;
                this.wslbs();
                this.state = 149;
                this.links();
                this.state = 150;
                this.wslbs();
            }

            this.state = 154;
            this.match(MADRParser.EOF);
        } catch (re) {
            if (re instanceof antlr4.error.RecognitionException) {
                localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            } else {
                throw re;
            }
        } finally {
            this.exitRule();
        }
        return localctx;
    }

    title() {
        let localctx = new TitleContext(this, this._ctx, this.state);
        this.enterRule(localctx, 2, MADRParser.RULE_title);
        try {
            this.enterOuterAlt(localctx, 1);
            this.state = 156;
            this.textLine();
        } catch (re) {
            if (re instanceof antlr4.error.RecognitionException) {
                localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            } else {
                throw re;
            }
        } finally {
            this.exitRule();
        }
        return localctx;
    }

    status() {
        let localctx = new StatusContext(this, this._ctx, this.state);
        this.enterRule(localctx, 4, MADRParser.RULE_status);
        try {
            this.enterOuterAlt(localctx, 1);
            this.state = 158;
            this.textLine();
        } catch (re) {
            if (re instanceof antlr4.error.RecognitionException) {
                localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            } else {
                throw re;
            }
        } finally {
            this.exitRule();
        }
        return localctx;
    }

    deciders() {
        let localctx = new DecidersContext(this, this._ctx, this.state);
        this.enterRule(localctx, 6, MADRParser.RULE_deciders);
        try {
            this.enterOuterAlt(localctx, 1);
            this.state = 160;
            this.textLine();
        } catch (re) {
            if (re instanceof antlr4.error.RecognitionException) {
                localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            } else {
                throw re;
            }
        } finally {
            this.exitRule();
        }
        return localctx;
    }

    date() {
        let localctx = new DateContext(this, this._ctx, this.state);
        this.enterRule(localctx, 8, MADRParser.RULE_date);
        try {
            this.enterOuterAlt(localctx, 1);
            this.state = 162;
            this.textLine();
        } catch (re) {
            if (re instanceof antlr4.error.RecognitionException) {
                localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            } else {
                throw re;
            }
        } finally {
            this.exitRule();
        }
        return localctx;
    }

    technicalStory() {
        let localctx = new TechnicalStoryContext(this, this._ctx, this.state);
        this.enterRule(localctx, 10, MADRParser.RULE_technicalStory);
        try {
            this.enterOuterAlt(localctx, 1);
            this.state = 164;
            this.textLine();
        } catch (re) {
            if (re instanceof antlr4.error.RecognitionException) {
                localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            } else {
                throw re;
            }
        } finally {
            this.exitRule();
        }
        return localctx;
    }

    contextAndProblemStatement() {
        let localctx = new ContextAndProblemStatementContext(this, this._ctx, this.state);
        this.enterRule(localctx, 12, MADRParser.RULE_contextAndProblemStatement);
        try {
            this.enterOuterAlt(localctx, 1);
            this.state = 166;
            this.multilineText();
        } catch (re) {
            if (re instanceof antlr4.error.RecognitionException) {
                localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            } else {
                throw re;
            }
        } finally {
            this.exitRule();
        }
        return localctx;
    }

    decisionDrivers() {
        let localctx = new DecisionDriversContext(this, this._ctx, this.state);
        this.enterRule(localctx, 14, MADRParser.RULE_decisionDrivers);
        try {
            this.enterOuterAlt(localctx, 1);
            this.state = 168;
            this.list();
        } catch (re) {
            if (re instanceof antlr4.error.RecognitionException) {
                localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            } else {
                throw re;
            }
        } finally {
            this.exitRule();
        }
        return localctx;
    }

    consideredOptions() {
        let localctx = new ConsideredOptionsContext(this, this._ctx, this.state);
        this.enterRule(localctx, 16, MADRParser.RULE_consideredOptions);
        try {
            this.enterOuterAlt(localctx, 1);
            this.state = 170;
            this.list();
        } catch (re) {
            if (re instanceof antlr4.error.RecognitionException) {
                localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            } else {
                throw re;
            }
        } finally {
            this.exitRule();
        }
        return localctx;
    }

    decisionOutcome() {
        let localctx = new DecisionOutcomeContext(this, this._ctx, this.state);
        this.enterRule(localctx, 18, MADRParser.RULE_decisionOutcome);
        try {
            this.enterOuterAlt(localctx, 1);
            this.state = 172;
            this.wslbs();
            this.state = 173;
            this.chosenOptionAndExplanation();
            this.state = 182;
            this._errHandler.sync(this);
            var la_ = this._interp.adaptivePredict(this._input, 19, this._ctx);
            if (la_ === 1) {
                this.state = 174;
                this.wslbs();
                this.state = 175;
                this.match(MADRParser.POSITIVE_CONSEQUENCES_HEADING);
                this.state = 178;
                this._errHandler.sync(this);
                var la_ = this._interp.adaptivePredict(this._input, 18, this._ctx);
                if (la_ === 1) {
                    this.state = 176;
                    this.match(MADRParser.WS);
                    this.state = 177;
                    this.match(MADRParser.OPTIONAL_MAKER);
                }
                this.state = 180;
                this.positiveConsequences();
            }
            this.state = 192;
            this._errHandler.sync(this);
            var la_ = this._interp.adaptivePredict(this._input, 21, this._ctx);
            if (la_ === 1) {
                this.state = 184;
                this.wslbs();
                this.state = 185;
                this.match(MADRParser.NEGATIVE_CONSEQUENCES_HEADING);
                this.state = 188;
                this._errHandler.sync(this);
                var la_ = this._interp.adaptivePredict(this._input, 20, this._ctx);
                if (la_ === 1) {
                    this.state = 186;
                    this.match(MADRParser.WS);
                    this.state = 187;
                    this.match(MADRParser.OPTIONAL_MAKER);
                }
                this.state = 190;
                this.negativeConsequences();
            }
        } catch (re) {
            if (re instanceof antlr4.error.RecognitionException) {
                localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            } else {
                throw re;
            }
        } finally {
            this.exitRule();
        }
        return localctx;
    }

    prosAndConsOfOptions() {
        let localctx = new ProsAndConsOfOptionsContext(this, this._ctx, this.state);
        this.enterRule(localctx, 20, MADRParser.RULE_prosAndConsOfOptions);
        var _la = 0;
        try {
            this.enterOuterAlt(localctx, 1);
            this.state = 197;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            do {
                this.state = 194;
                this.optionSection();
                this.state = 195;
                this.wslbs();
                this.state = 199;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
            } while (_la === 14);
        } catch (re) {
            if (re instanceof antlr4.error.RecognitionException) {
                localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            } else {
                throw re;
            }
        } finally {
            this.exitRule();
        }
        return localctx;
    }

    optionSection() {
        let localctx = new OptionSectionContext(this, this._ctx, this.state);
        this.enterRule(localctx, 22, MADRParser.RULE_optionSection);
        try {
            this.enterOuterAlt(localctx, 1);
            this.state = 201;
            this.match(MADRParser.SUBSUBHEADING_PREFIX);
            this.state = 202;
            this.optionTitle();
            this.state = 203;
            this.match(MADRParser.NEWLINE);
            this.state = 207;
            this._errHandler.sync(this);
            var la_ = this._interp.adaptivePredict(this._input, 23, this._ctx);
            if (la_ === 1) {
                this.state = 204;
                this.wslbs();
                this.state = 205;
                this.optionDescription();
            }
            this.state = 212;
            this._errHandler.sync(this);
            var la_ = this._interp.adaptivePredict(this._input, 24, this._ctx);
            if (la_ === 1) {
                this.state = 209;
                this.wslbs();
                this.state = 210;
                this.prolist();
            }
            this.state = 217;
            this._errHandler.sync(this);
            var la_ = this._interp.adaptivePredict(this._input, 25, this._ctx);
            if (la_ === 1) {
                this.state = 214;
                this.wslbs();
                this.state = 215;
                this.conlist();
            }
        } catch (re) {
            if (re instanceof antlr4.error.RecognitionException) {
                localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            } else {
                throw re;
            }
        } finally {
            this.exitRule();
        }
        return localctx;
    }

    chosenOptionAndExplanation() {
        let localctx = new ChosenOptionAndExplanationContext(this, this._ctx, this.state);
        this.enterRule(localctx, 24, MADRParser.RULE_chosenOptionAndExplanation);
        try {
            this.enterOuterAlt(localctx, 1);
            this.state = 219;
            this.multilineText();
        } catch (re) {
            if (re instanceof antlr4.error.RecognitionException) {
                localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            } else {
                throw re;
            }
        } finally {
            this.exitRule();
        }
        return localctx;
    }

    positiveConsequences() {
        let localctx = new PositiveConsequencesContext(this, this._ctx, this.state);
        this.enterRule(localctx, 26, MADRParser.RULE_positiveConsequences);
        try {
            this.enterOuterAlt(localctx, 1);
            this.state = 221;
            this.list();
        } catch (re) {
            if (re instanceof antlr4.error.RecognitionException) {
                localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            } else {
                throw re;
            }
        } finally {
            this.exitRule();
        }
        return localctx;
    }

    negativeConsequences() {
        let localctx = new NegativeConsequencesContext(this, this._ctx, this.state);
        this.enterRule(localctx, 28, MADRParser.RULE_negativeConsequences);
        try {
            this.enterOuterAlt(localctx, 1);
            this.state = 223;
            this.list();
        } catch (re) {
            if (re instanceof antlr4.error.RecognitionException) {
                localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            } else {
                throw re;
            }
        } finally {
            this.exitRule();
        }
        return localctx;
    }

    optionTitle() {
        let localctx = new OptionTitleContext(this, this._ctx, this.state);
        this.enterRule(localctx, 30, MADRParser.RULE_optionTitle);
        try {
            this.enterOuterAlt(localctx, 1);
            this.state = 225;
            this.textLine();
        } catch (re) {
            if (re instanceof antlr4.error.RecognitionException) {
                localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            } else {
                throw re;
            }
        } finally {
            this.exitRule();
        }
        return localctx;
    }

    optionDescription() {
        let localctx = new OptionDescriptionContext(this, this._ctx, this.state);
        this.enterRule(localctx, 32, MADRParser.RULE_optionDescription);
        try {
            this.enterOuterAlt(localctx, 1);
            this.state = 227;
            this.multilineText();
        } catch (re) {
            if (re instanceof antlr4.error.RecognitionException) {
                localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            } else {
                throw re;
            }
        } finally {
            this.exitRule();
        }
        return localctx;
    }

    prolist() {
        let localctx = new ProlistContext(this, this._ctx, this.state);
        this.enterRule(localctx, 34, MADRParser.RULE_prolist);
        try {
            this.enterOuterAlt(localctx, 1);
            this.state = 234;
            this._errHandler.sync(this);
            var _alt = 1;
            do {
                switch (_alt) {
                    case 1:
                        this.state = 229;
                        this.wslbs();
                        this.state = 230;
                        this.match(MADRParser.LIST_MARKER);
                        this.state = 231;
                        this.match(MADRParser.T__0);
                        this.state = 232;
                        this.textLine();
                        break;
                    default:
                        throw new antlr4.error.NoViableAltException(this);
                }
                this.state = 236;
                this._errHandler.sync(this);
                _alt = this._interp.adaptivePredict(this._input, 26, this._ctx);
            } while (_alt != 2 && _alt != antlr4.atn.ATN.INVALID_ALT_NUMBER);
        } catch (re) {
            if (re instanceof antlr4.error.RecognitionException) {
                localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            } else {
                throw re;
            }
        } finally {
            this.exitRule();
        }
        return localctx;
    }

    conlist() {
        let localctx = new ConlistContext(this, this._ctx, this.state);
        this.enterRule(localctx, 36, MADRParser.RULE_conlist);
        try {
            this.enterOuterAlt(localctx, 1);
            this.state = 243;
            this._errHandler.sync(this);
            var _alt = 1;
            do {
                switch (_alt) {
                    case 1:
                        this.state = 238;
                        this.wslbs();
                        this.state = 239;
                        this.match(MADRParser.LIST_MARKER);
                        this.state = 240;
                        this.match(MADRParser.T__1);
                        this.state = 241;
                        this.textLine();
                        break;
                    default:
                        throw new antlr4.error.NoViableAltException(this);
                }
                this.state = 245;
                this._errHandler.sync(this);
                _alt = this._interp.adaptivePredict(this._input, 27, this._ctx);
            } while (_alt != 2 && _alt != antlr4.atn.ATN.INVALID_ALT_NUMBER);
        } catch (re) {
            if (re instanceof antlr4.error.RecognitionException) {
                localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            } else {
                throw re;
            }
        } finally {
            this.exitRule();
        }
        return localctx;
    }

    links() {
        let localctx = new LinksContext(this, this._ctx, this.state);
        this.enterRule(localctx, 38, MADRParser.RULE_links);
        try {
            this.enterOuterAlt(localctx, 1);
            this.state = 247;
            this.list();
            this.state = 248;
            this.wslbs();
        } catch (re) {
            if (re instanceof antlr4.error.RecognitionException) {
                localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            } else {
                throw re;
            }
        } finally {
            this.exitRule();
        }
        return localctx;
    }

    list() {
        let localctx = new ListContext(this, this._ctx, this.state);
        this.enterRule(localctx, 40, MADRParser.RULE_list);
        try {
            this.enterOuterAlt(localctx, 1);
            this.state = 255;
            this._errHandler.sync(this);
            var _alt = 1;
            do {
                switch (_alt) {
                    case 1:
                        this.state = 250;
                        this.wslbs();
                        this.state = 251;
                        this.match(MADRParser.LIST_MARKER);
                        this.state = 253;
                        this._errHandler.sync(this);
                        var la_ = this._interp.adaptivePredict(this._input, 28, this._ctx);
                        if (la_ === 1) {
                            this.state = 252;
                            this.textLine();
                        }
                        break;
                    default:
                        throw new antlr4.error.NoViableAltException(this);
                }
                this.state = 257;
                this._errHandler.sync(this);
                _alt = this._interp.adaptivePredict(this._input, 29, this._ctx);
            } while (_alt != 2 && _alt != antlr4.atn.ATN.INVALID_ALT_NUMBER);
        } catch (re) {
            if (re instanceof antlr4.error.RecognitionException) {
                localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            } else {
                throw re;
            }
        } finally {
            this.exitRule();
        }
        return localctx;
    }

    textLine() {
        let localctx = new TextLineContext(this, this._ctx, this.state);
        this.enterRule(localctx, 42, MADRParser.RULE_textLine);
        try {
            this.enterOuterAlt(localctx, 1);
            this.state = 261;
            this._errHandler.sync(this);
            var _alt = 1 + 1;
            do {
                switch (_alt) {
                    case 1 + 1:
                        this.state = 261;
                        this._errHandler.sync(this);
                        switch (this._input.LA(1)) {
                            case 3:
                            case 4:
                            case 7:
                            case 13:
                            case 15:
                                this.state = 259;
                                this.any();
                                break;
                            case 5:
                                this.state = 260;
                                this.match(MADRParser.WS);
                                break;
                            default:
                                throw new antlr4.error.NoViableAltException(this);
                        }
                        break;
                    default:
                        throw new antlr4.error.NoViableAltException(this);
                }
                this.state = 263;
                this._errHandler.sync(this);
                _alt = this._interp.adaptivePredict(this._input, 31, this._ctx);
            } while (_alt != 1 && _alt != antlr4.atn.ATN.INVALID_ALT_NUMBER);
        } catch (re) {
            if (re instanceof antlr4.error.RecognitionException) {
                localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            } else {
                throw re;
            }
        } finally {
            this.exitRule();
        }
        return localctx;
    }

    multilineText() {
        let localctx = new MultilineTextContext(this, this._ctx, this.state);
        this.enterRule(localctx, 44, MADRParser.RULE_multilineText);
        try {
            this.enterOuterAlt(localctx, 1);
            this.state = 267;
            this._errHandler.sync(this);
            var _alt = 1 + 1;
            do {
                switch (_alt) {
                    case 1 + 1:
                        this.state = 267;
                        this._errHandler.sync(this);
                        switch (this._input.LA(1)) {
                            case 3:
                            case 4:
                            case 7:
                            case 13:
                            case 15:
                                this.state = 265;
                                this.any();
                                break;
                            case 5:
                            case 6:
                                this.state = 266;
                                this.wslb();
                                break;
                            default:
                                throw new antlr4.error.NoViableAltException(this);
                        }
                        break;
                    default:
                        throw new antlr4.error.NoViableAltException(this);
                }
                this.state = 269;
                this._errHandler.sync(this);
                _alt = this._interp.adaptivePredict(this._input, 33, this._ctx);
            } while (_alt != 1 && _alt != antlr4.atn.ATN.INVALID_ALT_NUMBER);
        } catch (re) {
            if (re instanceof antlr4.error.RecognitionException) {
                localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            } else {
                throw re;
            }
        } finally {
            this.exitRule();
        }
        return localctx;
    }

    any() {
        let localctx = new AnyContext(this, this._ctx, this.state);
        this.enterRule(localctx, 46, MADRParser.RULE_any);
        var _la = 0;
        try {
            this.enterOuterAlt(localctx, 1);
            this.state = 271;
            _la = this._input.LA(1);
            if (!((_la & ~0x1f) === 0 && ((1 << _la) & 41112) !== 0)) {
                this._errHandler.recoverInline(this);
            } else {
                this._errHandler.reportMatch(this);
                this.consume();
            }
        } catch (re) {
            if (re instanceof antlr4.error.RecognitionException) {
                localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            } else {
                throw re;
            }
        } finally {
            this.exitRule();
        }
        return localctx;
    }
